--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
   <div class="container">
     <h1>Simulador de Inversiones en CEDEARS</h1>
 
-    <label for="initValue">Valor inicial:</label>
+    <label for="initValue">Valor inicial (Tu inversion inicial en pesos):</label>
     <input type="number" id="initValue" value="200000">
 
-    <label for="percentage">Porcentaje (%):</label>
+    <label for="percentage">Porcentaje aproximado de ganancias mensuales (%):</label>
     <input type="number" step="0.1" id="percentage" value="20">
 
-    <label for="months">Meses a invertir:</label>
+    <label for="months">Meses a invertir (Cantidad de meses que quieres invertir):</label>
     <input type="number" id="months" value="2">
 
-    <label for="monthlyAddition">Aporte mensual:</label>
+    <label for="monthlyAddition">Aporte mensual (Tu inversion extra mes por mes en pesos):</label>
     <input type="number" id="monthlyAddition" value="200000">
 
     <button onclick="calculate()">Calcular</button>
